@@ -316,32 +316,14 @@ for zlib in z gz ; do
 	       )
 done
 
-dnl Try static libraries before shared libraries.
-BZIP2LIB=
-for bz2lib in /usr/local/lib/libbz2.a /usr/lib/libbz2.a ; do
-  AC_MSG_CHECKING(for static $bz2lib)
-  if ! test -f $bz2lib ; then
-    AC_MSG_RESULT(no)
-    continue
-  else
-    AC_MSG_RESULT(yes)
-    BZIP2LIB=$bz2lib
-    AC_DEFINE_UNQUOTED(BZIP2LIB, "$BZIP2LIB")
-    AC_SUBST(BZIP2LIB)
-    break
-  fi
-done
-
-if test -z "$BZIP2LIB" ; then
-  for bz2lib in bz2 ; do
+for bz2lib in bz2 ; do
    AC_CHECK_LIB(${bz2lib}, bzread, 
 	[LIBS="$LIBS -l${bz2lib}"; break], 
 	[if test ${bz2lib} = bz2; then 
 	    AC_MSG_WARN([missing libbz2.a (from the bzip2 package)]) 
 	 fi]
 	       )
-  done
-fi
+done
 
 dnl XXX these are needed only by rpmgettext right now
 AM_FUNC_ERROR_AT_LINE
